BuildHughes/translation-tool/inputs/source_meta/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>ACS_Site_ID__c</fullName>
        <description>For Hughes Assets; N/A

For Customer Assets; Only applicable for Ku VSATs</description>
        <inlineHelpText>For Hughes Assets; N/A

For Customer Assets; Only applicable for Ku VSATs</inlineHelpText>
        <label>ACS Site ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates when the technician can have access to the asset</description>
        <inlineHelpText>Indicates when the technician can have access to the asset</inlineHelpText>
        <label>Access Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adapter_Model__c</fullName>
        <description>Adapter Model</description>
        <inlineHelpText>Adapter Model</inlineHelpText>
        <label>Adapter Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Owner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>LE</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Brand</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Franchise</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Franchise-1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets (Asset Owner)</relationshipLabel>
        <relationshipName>Assets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Supported_By__c</fullName>
        <description>For Hughes Assets: N/A

For Customer Assets: Hughes, Customer, NAP</description>
        <inlineHelpText>For Hughes Assets: N/A

For Customer Assets: Hughes, Customer, NAP</inlineHelpText>
        <label>Asset Supported By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hughes</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>NAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <description>Indicates Hughes vs. Customer Assets</description>
        <inlineHelpText>Indicates Hughes vs. Customer Assets</inlineHelpText>
        <label>Asset Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hughes</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Associated_Networks__c</fullName>
        <description>For Hughes Assets: List of Networks a given Hughes Asset is associated with separated by | (Pipe) delimiter.

For Customer Assets: N/A</description>
        <inlineHelpText>For Hughes Assets: List of Networks a given Hughes Asset is associated with separated by | (Pipe) delimiter.

For Customer Assets: N/A</inlineHelpText>
        <label>Associated Networks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Backup_NAP_WAN_Gateway_IP__c</fullName>
        <description>Backup NAP WAN Gateway IP</description>
        <inlineHelpText>Backup NAP WAN Gateway IP</inlineHelpText>
        <label>Backup NAP WAN Gateway IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_NAP_WAN_IP__c</fullName>
        <description>Backup NAP WAN IP</description>
        <inlineHelpText>Backup NAP WAN IP</inlineHelpText>
        <label>Backup NAP WAN IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_NAP_WAN_Protocol__c</fullName>
        <description>Backup NAP WAN Protocol</description>
        <inlineHelpText>Backup NAP WAN Protocol</inlineHelpText>
        <label>Backup NAP WAN Protocol</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_NAP_WAN_Subnet_Mask__c</fullName>
        <description>Backup NAP WAN Subnet Mask</description>
        <inlineHelpText>Backup NAP WAN Subnet Mask</inlineHelpText>
        <label>Backup NAP WAN Subnet Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barcode__c</fullName>
        <description>For Hughes Assets; N/A

For Customer Assets; Device Serial number which is scanned.</description>
        <inlineHelpText>For Hughes Assets; N/A

For Customer Assets; Device Serial number which is scanned.</inlineHelpText>
        <label>Barcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beam_Id__c</fullName>
        <description>Beam Id</description>
        <inlineHelpText>Beam Id</inlineHelpText>
        <label>Beam Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CV_Site_ID__c</fullName>
        <description>CV Site ID</description>
        <externalId>true</externalId>
        <inlineHelpText>CV Site ID</inlineHelpText>
        <label>CV Site ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_ID__c</fullName>
        <description>Channel ID</description>
        <inlineHelpText>Channel ID</inlineHelpText>
        <label>Channel ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Checkdigit__c</fullName>
        <description>Checkdigit</description>
        <inlineHelpText>Checkdigit</inlineHelpText>
        <label>Checkdigit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_ID__c</fullName>
        <description>For Hughes Assets: N/A

For Customer Assets: Same as NAP Key or ST Name or Wireless Account Number.</description>
        <inlineHelpText>For Hughes Assets: N/A

For Customer Assets: Same as NAP Key or ST Name or Wireless Account Number.</inlineHelpText>
        <label>Circuit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Courtesy_Warranty_End_Date__c</fullName>
        <description>Applicable for B2C only that all customers get.</description>
        <inlineHelpText>Courtesy Warranty End Date</inlineHelpText>
        <label>Courtesy Warranty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Location_ID__c</fullName>
        <formula>Account.Customer_Location_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Location ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Order_Number__c</fullName>
        <description>Customer Order Number for NAP orders</description>
        <label>Customer Order Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Program</description>
        <inlineHelpText>Customer Program</inlineHelpText>
        <label>Customer Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Region__c</fullName>
        <description>Customer Region</description>
        <inlineHelpText>Customer Region</inlineHelpText>
        <label>Customer Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Site_Id__c</fullName>
        <description>Customer Site Id</description>
        <inlineHelpText>Customer Site Id</inlineHelpText>
        <label>Customer Site Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DI_CheckSum__c</fullName>
        <label>DI CheckSum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMN_Vendor_Name__c</fullName>
        <description>DMN Vendor Name</description>
        <inlineHelpText>DMN Vendor Name</inlineHelpText>
        <label>DMN Vendor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSS_Order_ID__c</fullName>
        <description>DSS Order ID</description>
        <inlineHelpText>DSS Order ID</inlineHelpText>
        <label>DSS Order ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Center__c</fullName>
        <description>For Hughes Assets; Comma Separated list of Datacen-ters that the asset is a member (typically 1, but not always)

For Customer Assets; N/A</description>
        <inlineHelpText>For Hughes Assets; Comma Separated list of Datacen-ters that the asset is a member (typically 1, but not always)

For Customer Assets; N/A</inlineHelpText>
        <label>Data Center</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deregister_date__c</fullName>
        <description>Deregister date</description>
        <inlineHelpText>Deregister date</inlineHelpText>
        <label>Deregister date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Downlink_Cellid__c</fullName>
        <description>Downlink Cellid</description>
        <inlineHelpText>Downlink Cellid</inlineHelpText>
        <label>Downlink Cellid</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Downlink_Speed__c</fullName>
        <description>Downlink Speed</description>
        <inlineHelpText>Downlink Speed</inlineHelpText>
        <label>Downlink Speed</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESRI_Latitude__c</fullName>
        <description>ESRI Latitude</description>
        <inlineHelpText>ESRI Latitude</inlineHelpText>
        <label>ESRI Latitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESRI_Longitude__c</fullName>
        <description>ESRI Longitude</description>
        <inlineHelpText>ESRI Longitude</inlineHelpText>
        <label>ESRI Longitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Error Message is Used to show the Error happend on the Conversion Process</description>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extented_Trial_Period_Date__c</fullName>
        <description>Extented Trial Period Date</description>
        <inlineHelpText>Extented Trial Period Date</inlineHelpText>
        <label>Extented Trial Period Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FAP_Plan_ID__c</fullName>
        <description>FAP Plan ID</description>
        <inlineHelpText>FAP Plan ID</inlineHelpText>
        <label>FAP Plan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSO_ID__c</fullName>
        <description>FSO ID</description>
        <inlineHelpText>FSO ID</inlineHelpText>
        <label>FSO ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failover_Hub__c</fullName>
        <description>For Hughes Assets; N/A

For Customer Assets; it represents diversity hub</description>
        <inlineHelpText>For Hughes Assets; N/A

For Customer Assets; it represents diversity hub</inlineHelpText>
        <label>Failover Hub</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_Dispatch_End_Date__c</fullName>
        <description>Free Dispatch End Date</description>
        <inlineHelpText>Free Dispatch End Date</inlineHelpText>
        <label>Free Dispatch End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Gateway_Id__c</fullName>
        <description>Gateway Id</description>
        <inlineHelpText>Gateway Id</inlineHelpText>
        <label>Gateway Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gateway_Name__c</fullName>
        <formula>CASE(Gateway_Id__c, 
&quot;1&quot;,&quot;ALB&quot;, 
&quot;3&quot;, &quot;BIL&quot;, 
&quot;9&quot;, &quot;ROS&quot;,
&quot;15&quot;, &quot;SEA&quot;, 
&quot;16&quot;, &quot;STC&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gateway Name</inlineHelpText>
        <label>Gateway Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAN_Config__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HAN Config</description>
        <inlineHelpText>HAN Config</inlineHelpText>
        <label>HAN Config</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HAN_Type__c</fullName>
        <description>HAN Type</description>
        <inlineHelpText>HAN Type</inlineHelpText>
        <label>HAN Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HDEVNAME__c</fullName>
        <description>HDEVNAME</description>
        <inlineHelpText>HDEVNAME</inlineHelpText>
        <label>HDEVNAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HNS_Level__c</fullName>
        <description>HNS Level</description>
        <inlineHelpText>HNS Level</inlineHelpText>
        <label>HNS Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HNS_Location_ID__c</fullName>
        <formula>Account.HNS_Location_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HNS Location ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HNS_Product_Grouping__c</fullName>
        <formula>HNS_Product__r.Product_Grouping__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HNS Product Grouping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HNS_Product_Type__c</fullName>
        <formula>TEXT(HNS_Product__r.Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HNS Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HNS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up Reference to the HNS Product</description>
        <label>HNS Product</label>
        <referenceTo>HNS_Products__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_Exclude_Asset_From_Chronic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Asset From Chronic Calculation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HUB_Site_Id__c</fullName>
        <description>HUB Site Id</description>
        <inlineHelpText>HUB Site Id</inlineHelpText>
        <label>HUB Site Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_AGW_Name__c</fullName>
        <description>Same as Home Hub Name</description>
        <inlineHelpText>Same as Home Hub Name</inlineHelpText>
        <label>Home AGW Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_HUB_Id__c</fullName>
        <description>Home HUB Id</description>
        <inlineHelpText>Home HUB Id</inlineHelpText>
        <label>Home HUB Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_Business_Status__c</fullName>
        <formula>TEXT(Status) &amp; IF(NOT(ISBLANK(Status_Reason_Code_Description__c)),IF(NOT(ISBLANK(Status_Reason_Code__c)), &apos;(&apos;+Status_Reason_Code_Description__c+&apos;:&apos;+Status_Reason_Code__c+&apos;)&apos;,&apos;(&apos;+Status_Reason_Code_Description__c+&apos;)&apos;), IF(NOT(ISBLANK(Status_Reason_Code__c)),&apos;:&apos;+Status_Reason_Code__c,&apos;&apos;))</formula>
        <label>Business Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_chronic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chronic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hughes_Asset_ID__c</fullName>
        <description>For Hughes Assets; it is coming from NW OPS. 

For Customer Assets; it is same as SAN. &quot;Needs Device ID?&quot; and &quot;Device ID Suffix&quot; attributes on Product are used to generate Hughes Asset ID</description>
        <inlineHelpText>For Hughes Assets; it is coming from NW OPS. 

For Customer Assets; it is same as SAN. &quot;Needs Device ID?&quot; and &quot;Device ID Suffix&quot; attributes on Product are used to generate Hughes Asset ID</inlineHelpText>
        <label>Hughes Asset ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISP_AGW_Name__c</fullName>
        <description>Same as ISP Hub Name</description>
        <inlineHelpText>Same as ISP Hub Name</inlineHelpText>
        <label>ISP AGW Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISP_HUB_Id__c</fullName>
        <description>ISP HUB Id</description>
        <inlineHelpText>ISP HUB Id</inlineHelpText>
        <label>ISP HUB Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Self_Installed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Represents whether the Asset was self installed by the customer or not</description>
        <inlineHelpText>Represents whether the Asset was self installed by the customer or not</inlineHelpText>
        <label>Is Self Installed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Site_HUB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Site HUB</description>
        <label>Is Site HUB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Temp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Temp Transport or Express Backup Service</description>
        <label>Is Temp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAN1_IP_Address__c</fullName>
        <description>LAN1 IP Address</description>
        <inlineHelpText>LAN1 IP Address</inlineHelpText>
        <label>LAN1 IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAN1_Subnet_Mask__c</fullName>
        <description>LAN1 Subnet Mask</description>
        <inlineHelpText>LAN1 Subnet Mask</inlineHelpText>
        <label>LAN1 Subnet Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAN2_IP_Address__c</fullName>
        <description>LAN2 IP Address</description>
        <inlineHelpText>LAN2 IP Address</inlineHelpText>
        <label>LAN2 IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAN2_Subnet_Mask__c</fullName>
        <description>LAN2 Subnet Mask</description>
        <inlineHelpText>LAN2 Subnet Mask</inlineHelpText>
        <label>LAN2 Subnet Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Commission_Date__c</fullName>
        <description>For Hughes Assets; N/A

For Customer Assets; Latest commissioned date for an Asset</description>
        <inlineHelpText>For Hughes Assets; N/A

For Customer Assets; Latest commissioned date for an Asset</inlineHelpText>
        <label>Latest Commission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Decommission_Date__c</fullName>
        <description>For Hughes Assets; N/A

For Customer Assets; Date when the asset was decommissioned last.</description>
        <inlineHelpText>For Hughes Assets; N/A

For Customer Assets; Date when the asset was decommissioned last.</inlineHelpText>
        <label>Latest Decommission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>Latitude</description>
        <inlineHelpText>Latitude</inlineHelpText>
        <label>Latitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Account_Zipcode__c</fullName>
        <formula>Account.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Account Zipcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <description>Longitude</description>
        <inlineHelpText>Longitude</inlineHelpText>
        <label>Longitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAC_Address__c</fullName>
        <description>For Hughes Assets; N/A</description>
        <inlineHelpText>For Hughes Assets; N/A</inlineHelpText>
        <label>MAC Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Management_IP_Address__c</fullName>
        <description>Networking Information from DMN</description>
        <inlineHelpText>Networking Information from DMN</inlineHelpText>
        <label>Management IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modem_Number__c</fullName>
        <description>Modem Number</description>
        <inlineHelpText>Modem Number</inlineHelpText>
        <label>Modem Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAD_Business_Group__c</fullName>
        <description>For Hughes Assets: NAD group responsible (deep support, NOC monitoring, SBSS etc.)

For Customer Assets: N/A</description>
        <inlineHelpText>For Hughes Assets: NAD group responsible (deep support, NOC monitoring, SBSS etc.)

For Customer Assets: N/A</inlineHelpText>
        <label>NAD Business Group</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAP_Completion_Date__c</fullName>
        <description>NAP Completion Date, which used to know when the NAP Provider completed their Work</description>
        <label>NAP/Vendor Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NAP_Order_Number__c</fullName>
        <description>NAP Order Number</description>
        <inlineHelpText>NAP Order Number</inlineHelpText>
        <label>NAP/Vendor Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAP_PPP_Password__c</fullName>
        <description>NAP PPP Password</description>
        <inlineHelpText>NAP PPP Password</inlineHelpText>
        <label>NAP PPP Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAP_PPP_Username__c</fullName>
        <description>NAP PPP Username</description>
        <inlineHelpText>NAP PPP Username</inlineHelpText>
        <label>NAP PPP Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAP_WAN_Gateway_IP__c</fullName>
        <description>NAP WAN Gateway IP</description>
        <inlineHelpText>NAP WAN Gateway IP</inlineHelpText>
        <label>NAP WAN Gateway IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAP_WAN_IP__c</fullName>
        <description>NAP WAN IP</description>
        <inlineHelpText>NAP WAN IP</inlineHelpText>
        <label>NAP WAN IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAP_WAN_Protocol__c</fullName>
        <description>NAP WAN Protocol</description>
        <inlineHelpText>NAP WAN Protocol</inlineHelpText>
        <label>NAP WAN Protocol</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAP_WAN_Subnet_Mask__c</fullName>
        <description>NAP WAN Subnet Mask</description>
        <inlineHelpText>NAP WAN Subnet Mask</inlineHelpText>
        <label>NAP WAN Subnet Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAT_IP__c</fullName>
        <description>NAT IP</description>
        <inlineHelpText>NAT IP</inlineHelpText>
        <label>NAT IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAT_Subnet_Mask__c</fullName>
        <description>NAT Subnet Mask</description>
        <inlineHelpText>NAT Subnet Mask</inlineHelpText>
        <label>NAT Subnet Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NMS_BBS_ID__c</fullName>
        <label>NMS BBS ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NMS_Service_Plan_Id__c</fullName>
        <label>NMS Service Plan Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOCC_Latitude__c</fullName>
        <description>NOCC Latitude</description>
        <inlineHelpText>NOCC Latitude</inlineHelpText>
        <label>NOCC Latitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOCC_Longitude__c</fullName>
        <description>NOCC Longitude</description>
        <inlineHelpText>NOCC Longitude</inlineHelpText>
        <label>NOCC Longitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPR_IP__c</fullName>
        <description>NPR IP</description>
        <inlineHelpText>NPR IP</inlineHelpText>
        <label>NPR IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPR_Subnet_Mask__c</fullName>
        <description>NPR Subnet Mask</description>
        <inlineHelpText>NPR Subnet Mask</inlineHelpText>
        <label>NPR Subnet Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Netgroup_Name__c</fullName>
        <description>Netgroup Name</description>
        <label>Netgroup Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_CRM_PS_SAN__c</fullName>
        <description>PeopleSoft SAN.</description>
        <label>Old CRM PS SAN</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_Premise_Number__c</fullName>
        <formula>VALUE(On_premise_Central_DB_ID__c)</formula>
        <label>On Premise Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_premise_Central_DB_ID__c</fullName>
        <description>On-premise Central DB ID</description>
        <externalId>true</externalId>
        <inlineHelpText>On-premise Central DB ID</inlineHelpText>
        <label>On-premise Central DB ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_Offer_Lineitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Offer LineItem</label>
        <referenceTo>Order_Offer_LineItem__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <description>For Hughes Assets: High level organization Hughes Asset belongs to.

For Customer Assets: N/A</description>
        <inlineHelpText>For Hughes Assets: High level organization Hughes Asset belongs to.

For Customer Assets: N/A</inlineHelpText>
        <label>Organization</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PEP_Max_Downstream__c</fullName>
        <description>PEP Max Downstream</description>
        <inlineHelpText>PEP Max Downstream</inlineHelpText>
        <label>PEP Max Downstream</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PEP_Max_Upstream__c</fullName>
        <description>PEP Max Upstream</description>
        <inlineHelpText>PEP Max Upstream</inlineHelpText>
        <label>PEP Max Upstream</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPIL__c</fullName>
        <label>PPIL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PS_Site_BO_ID__c</fullName>
        <description>PeopleSoft System Site BO ID</description>
        <externalId>true</externalId>
        <label>PS Site BO ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Site_ID__c</fullName>
        <description>PS Site ID</description>
        <externalId>true</externalId>
        <label>PS Site ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Code__c</fullName>
        <description>Payment Code</description>
        <inlineHelpText>Payment Code</inlineHelpText>
        <label>Payment Code</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pin__c</fullName>
        <description>Pin</description>
        <inlineHelpText>Pin</inlineHelpText>
        <label>Pin</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Hub__c</fullName>
        <description>For Hughes Assets; N/A

For Customer Assets; e.g. NLV Hub, Gtwon Hub</description>
        <inlineHelpText>For Hughes Assets; N/A

For Customer Assets; e.g. NLV Hub, Gtwon Hub</inlineHelpText>
        <label>Primary Hub</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Group__c</fullName>
        <description>Profile Group</description>
        <inlineHelpText>Profile Group</inlineHelpText>
        <label>Profile Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_SLA__c</fullName>
        <description>Provider SLA</description>
        <inlineHelpText>Provider SLA</inlineHelpText>
        <label>Provider SLA</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Register_Date__c</fullName>
        <description>Register Date</description>
        <inlineHelpText>Register Date</inlineHelpText>
        <label>Register Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Relationship_Start_Date__c</fullName>
        <description>Relationship Start Date</description>
        <inlineHelpText>Relationship Start Date</inlineHelpText>
        <label>Relationship Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_End_Date__c</fullName>
        <description>Renewal End Date</description>
        <inlineHelpText>Renewal End Date</inlineHelpText>
        <label>Renewal End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ST_Name__c</fullName>
        <description>ST Name</description>
        <inlineHelpText>ST Name</inlineHelpText>
        <label>ST Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SWAP_Auth_Code__c</fullName>
        <description>SWAP Auth Code</description>
        <inlineHelpText>SWAP Auth Code</inlineHelpText>
        <label>SWAP Auth Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <description>Sales Channel</description>
        <inlineHelpText>Sales Channel</inlineHelpText>
        <label>Sales Channel</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Satellite__c</fullName>
        <description>For Hughes Assets; N/A

For Customer Assets; Only for VSATs</description>
        <inlineHelpText>For Hughes Assets; N/A

For Customer Assets; Only for VSATs</inlineHelpText>
        <label>Satellite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>